# retorno

./: .gitignore  BUGS.md  DONE.md  TODO.md  TODO.txt  borrame.md  log_copy.txt  pyproject.toml  readme.es.md  readme.md
data/: audio_config.json  modules.json
data/arcs/: carnaval_cache_01.json  (+1 more)
docs/: arcs.es.md  arcs.md  intel_lore.es.md  intel_lore.md  manuals_style_guide.md  textual.es.md  textual.md
tests/: audio_config_smoke.py  audio_runtime_notice_smoke.py  config_audio_smoke.py  contacts_sector_smoke.py  contacts_smoke.py  debug_add_commands_smoke.py  debug_galaxy_smoke.py  debug_lore_arcs_smoke.py  debug_worldgen_graph_smoke.py  drone_completion_context_smoke.py  drone_modular_v1_smoke.py  drone_recall_all_smoke.py  drone_salvage_survey_smoke.py  energy_policy_smoke.py  exploration_recovery_smoke.py  forced_hidden_ad_hoc_smoke.py  galaxy_physical_model_smoke.py  hibernate_radiation_wake_smoke.py  hibernate_sequence_assets_smoke.py  job_id_numbering_smoke.py  lore_channel_preference_and_unlock_smoke.py  lore_distance_from_start_smoke.py  lore_secondary_count_weights_hard_smoke.py  lore_smoke.py  mail_metadata_and_log_header_smoke.py  manuals_style_check.py  nav_map_galaxy_dependencies_smoke.py  nav_map_galaxy_determinism_smoke.py  nav_map_galaxy_smoke.py  procedural_radiation_smoke.py  radiation_hull_smoke.py  route_hop_cap_smoke.py  route_solve_out_of_range_origins_smoke.py  save_load_smoke.py  scan_job_smoke.py  ship_layout_output_smoke.py  ship_survey_radiation_smoke.py  smoke_repl_manual.md  smoke_test.py  textual_active_jobs_job_id_smoke.py  (+7 more)
(+274 files in other folders)
