[project]
name = "retorno"
version = "0.1.0"
description = "Retorno - Sci-fi terminal simulation game"
authors = [
    { name = "Jon Ander Sande Eguskiza" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
