[project]
name = "retorno"
version = "0.1.0"
description = "Retorno - Sci-fi terminal simulation game"
authors = [
    { name = "Jon Ander Sande Eguskiza" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
ui = ["textual>=0.58.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
